# bsc-masters-thesis

./: .gitignore  makefile  predictions.csv  pyproject.toml  run.sh
configs/: bert_config.yaml  distilbert_config.yaml  logreg.yaml  pipeline.yaml  preprocess.yaml  roberta_config.yaml  visualize.yaml
data/interim/: explore.ipynb
data/interim/2026-04-10_14-01-26/: metadata.json
logs/2026-04-30_15-29-41/: metadata.json
notebooks/: bert.ipynb  main.ipynb  new.ipynb  new_train.ipynb  plot.ipynb  test_models.py  train.ipynb  vis.ipynb
results/bert-base-uncased/2026-04-24_10-57-27/: config.yaml  metrics.json
results/bert-base-uncased/2026-04-24_10-59-23/: config.yaml  metrics.json
results/bert-base-uncased/2026-04-24_11-12-37/: metrics.json
results/bert-base-uncased/2026-04-24_11-18-26/: config.yaml  metrics.json
results/bert-base-uncased/2026-04-24_11-25-17/: config.yaml  metrics.json
results/bert-base-uncased/2026-04-24_11-28-53/: metrics.json
results/bert-base-uncased/2026-04-24_11-30-18/: config.yaml  metrics.json
results/bert-base-uncased/2026-04-24_11-33-18/: metrics.json
results/bert-base-uncased/2026-04-24_11-45-09/: metrics.json
results/bert-base-uncased/2026-04-24_11-52-10/: metrics.json
results/bert-base-uncased/2026-04-24_11-54-43/: config.yaml  metrics.json
src/bsc_relish/: bert_config.yaml  config.yaml  embed.py  evaluate.py  infer.py  infer_bert.py  infer_roberta.py  pipeline.py  preprocess.py  preprocess_b2rdop.py  train.py  train_bert.py  train_distilbert.py  train_logreg.py  train_roberta.py  utils.py  visualize_report.py
(+1534 files in other folders)
